# ds-sim

./: README.md  pyproject.toml
app/: __init__.py  forms.py  launch.py  main.py  playback.py  use_cases.py
app/qt/: __init__.py  main.py
app/terminal/: __init__.py  tui.py  visualizer.py
src/: channel.py  engine.py  events.py  fault.py  messages.py  metrics.py  network.py  network_events.py  node.py  protocol.py  runtime.py  scheduler.py  topology.py
src/dissemination/: __init__.py  comparison.py  config.py  protocol.py  results.py  routing.py  runner.py  state.py  trace.py  trace_types.py
tests/: test_channels.py  test_tui.py  test_visualizer.py
topology_presets/: clustered_topology_100_nodes.json  clustered_topology_500_nodes.json  full_mesh.json  hypercube.json  line.json  ring.json  star.json  tree.json
